# lab-modbus-mcp

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/lab_modbus_mcp/: __init__.py  backend.py  cli.py  discovery.py  mock_backend.py  resource.py  wire.py
src/lab_modbus_mcp/builtin_instruments/: __init__.py  omron_e5cc_2byte_01c.yaml
tests/: test_backends.py  test_discovery_packaging.py  test_mb3_assets.py  test_mb3_workflows.py  test_resource.py  test_tcp_integration.py  test_transport.py  test_wire.py
